--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
     <head>
         <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:100,300,400,500,700,900" rel="stylesheet" />
         <meta charset="UTF-8" />
@@ -8,7 +9,29 @@
         <title>Fruta & Fruto</title>
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
-        <link href="./assets/css/cabecera.css" rel="stylesheet" />
+        <link href="./assets/css/style.css" rel="stylesheet" />
     </head>
-    <body></body>
+
+    <body>
+        <header>
+            <img src="./assets/img/logo.jpg" alt="">
+            <nav>
+                <ul>
+                    <li>
+                        <a id="activo" href="#">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="#">Recetas</a>
+                    </li>
+                    <li>
+                        <a href="#">Quienes Somos</a>
+                    </li>
+                    <li>
+                        <a href="#">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </body>
+
 </html>
