--- a/index.html
+++ b/index.html
@@ -13,22 +13,14 @@
     </head>
 
     <body>
-        <header>
-            <img src="./assets/img/logo.jpg" alt="">
-            <nav>
-                <ul>
-                    <li>
-                        <a id="activo" href="#">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="#">Recetas</a>
-                    </li>
-                    <li>
-                        <a href="#">Quienes Somos</a>
-                    </li>
-                    <li>
-                        <a href="#">Contacto</a>
-                    </li>
+        <header class="cabecera">
+            <img class="logo" src="./assets/img/logo.jpg" alt="">
+            <nav class="menu">
+                <ul class="menu-lista">
+                    <li class="menu-item"><a class="menu-link" id="activo" href="#">Inicio</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#">Recetas</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#">Quienes Somos</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#">Contacto</a></li>
                 </ul>
             </nav>
         </header>
