--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <title>Fruta & Fruto</title>
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
-        <link href="./assets/css/style.css" rel="stylesheet" />
+        <link href="./assets/css/cabecera.css" rel="stylesheet" />
+        <link href="./assets/css/menu/menu-lista.css" rel="stylesheet" />
+        <link href="./assets/css/menu/menu-item.css" rel="stylesheet" />
+        <link href="./assets/css/menu/menu-link.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -17,7 +20,7 @@
             <img class="logo" src="./assets/img/logo.jpg" alt="">
             <nav class="menu">
                 <ul class="menu-lista">
-                    <li class="menu-item"><a class="menu-link" id="activo" href="#">Inicio</a></li>
+                    <li class="menu-item"><a class="menu-link activo" href="#">Inicio</a></li>
                     <li class="menu-item"><a class="menu-link" href="#">Recetas</a></li>
                     <li class="menu-item"><a class="menu-link" href="#">Quienes Somos</a></li>
                     <li class="menu-item"><a class="menu-link" href="#">Contacto</a></li>
