agregando la sección del banner y about

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                 </ul>
             </nav>
         </header>
+        <section class="banner">
+            <img class="banner-imagen" src="./assets/img/banner.jpg" alt="banner">
+            <h2 class="banner-titulo">Reaproveche mejor los alimentos</h2>
+        </section>
+        <section class="sobre">
+            <h2 class="sobre-titulo">Recetas para economizar y ganar salud</h2>
+            <p class="sobre-descripcion">Nuestra receta te ayuda a aprovechar mejor los alimentos, economizar, ganar tiempo y practicidad</p>
+        </section>
     </body>
 
 </html>
