--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
         <header class="cabecera">
             <img class="logo" src="./assets/img/logo.jpg" alt="">
             <nav class="menu">
-                <ul class="menu-lista">
-                    <li class="menu-item"><a class="menu-link activo" href="#">Inicio</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Recetas</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Quienes Somos</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Contacto</a></li>
+                <ul class="menu__lista">
+                    <li class="menu__item"><a class="menu__link activo" href="#">Inicio</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Recetas</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Quienes Somos</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Contacto</a></li>
                 </ul>
             </nav>
         </header>
         <section class="banner">
-            <img class="banner-imagen" src="./assets/img/banner.jpg" alt="banner">
-            <h2 class="banner-titulo">Reaproveche mejor los alimentos</h2>
+            <img class="banner__imagen" src="./assets/img/banner.jpg" alt="banner">
+            <h2 class="banner__titulo">Reaproveche mejor los alimentos</h2>
         </section>
         <section class="sobre">
-            <h2 class="sobre-titulo">Recetas para economizar y ganar salud</h2>
-            <p class="sobre-descripcion">Nuestra receta te ayuda a aprovechar mejor los alimentos, economizar, ganar tiempo y practicidad</p>
+            <h2 class="sobre__titulo">Recetas para economizar y ganar salud</h2>
+            <p class="sobre__descripcion">Nuestra receta te ayuda a aprovechar mejor los alimentos, economizar, ganar tiempo y practicidad</p>
         </section>
     </body>
 
