--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <link href="./assets/css/menu/menu-lista.css" rel="stylesheet" />
         <link href="./assets/css/menu/menu-item.css" rel="stylesheet" />
         <link href="./assets/css/menu/menu-link.css" rel="stylesheet" />
+        <link href="./assets/css/banner/banner-imagen.css" rel="stylesheet" />
+        <link href="./assets/css/banner/banner-titulo.css" rel="stylesheet" />
     </head>
 
     <body>
