--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <link href="./assets/css/menu/menu-link.css" rel="stylesheet" />
         <link href="./assets/css/banner/banner-imagen.css" rel="stylesheet" />
         <link href="./assets/css/banner/banner-titulo.css" rel="stylesheet" />
+        <link href="./assets/css/sobre/sobre.css" rel="stylesheet" />
+        <link href="./assets/css/sobre/sobre-titulo.css" rel="stylesheet" />
+        <link href="./assets/css/sobre/sobre-descripcion.css" rel="stylesheet" />
     </head>
 
     <body>
