--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <link href="./assets/css/recetas/receta-titulo.css" rel="stylesheet" />
         <link href="./assets/css/recetas/receta-descripcion.css" rel="stylesheet" />
         <link href="./assets/css/recetas/receta-boton.css" rel="stylesheet" />
+        <link href="./assets/css/quienesSomos/quienesSomos.css" rel="stylesheet" />
+        <link href="./assets/css/quienesSomos/quienesSomos-titulo.css" rel="stylesheet" />
+        <link href="./assets/css/quienesSomos/quienesSomos-descripcion.css" rel="stylesheet" />
+        <link href="./assets/css/personas.css" rel="stylesheet" />
+        <link href="./assets/css/personas/persona.css" rel="stylesheet" />
+        <link href="./assets/css/personas/persona-imagen.css" rel="stylesheet" />
+        <link href="./assets/css/personas/persona-nombre.css" rel="stylesheet" />
+        <link href="./assets/css/personas/persona-funcion.css" rel="stylesheet" />
     </head>
 
     <body>
