aplicandó buenas practicas en el css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </nav>
         </header>
         <section class="banner">
-            <img class="banner__imagen" src="./assets/img/banner.jpg" alt="banner">
+            <div class="banner__imagen" alt="banner"></div>
             <h2 class="banner__titulo">Reaproveche mejor los alimentos</h2>
         </section>
         <section class="sobre">
