se agregó y estilizó el pie de página

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <link href="./assets/css/personas/persona-imagen.css" rel="stylesheet" />
         <link href="./assets/css/personas/persona-nombre.css" rel="stylesheet" />
         <link href="./assets/css/personas/persona-funcion.css" rel="stylesheet" />
+        <link href="./assets/css/pie-de-pagina.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -130,5 +131,8 @@
             </div>
         </section>
     </body>
+    <footer class="pie-de-pagina">
+        Contacto: ejemplo@dominio.com
+    </footer>
 
 </html>
